tests/paczka1/fuzzy1/76710841.err
Error in line 4: lIpayl S525 70,47
Error in line 5: lIpayl A834 29,8
Error in line 11: CfzLvhbGdSX S244 2,9
Error in line 30: hU42nZ523c A465 17,78
Error in line 32: lIpayl S244 6,65
Error in line 23: A834 A834 65,0
Error in line 36: CfzLvhbGdSX S244 85,7
